[metadata]
name = dafne
version = attr: dafne.config.version.VERSION
author = Francesco Santini
author_email = francesco.santini@unibas.ch
description =Dafne - Deep Anatomical Federated Network
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dafne-imaging/dafne
project_urls =
    Bug Tracker = https://github.com/dafne-imaging/dafne/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    h5py
    numpy
    scipy
    matplotlib
    pyqt5
    nibabel
    pydicom
    pypotrace-windows ; sys_platform == "win32"
    pypotrace ; sys_platform != "win32"
    dill
    progress
    tensorflow-gpu
    appdirs
    requests
    scikit-image
    SimpleITK-SimpleElastix # Own distribution including elastix
    pyradiomics # optional requirement
    muscle-bids
    importlib_resources ; python_version < "3.10"

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    dafne = dafne.bin.dafne:main
    dafne_calc_transforms = dafne.bin.calc_transforms:main
    dafne_edit_config = dafne.bin.edit_config:main